; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/twl/extr_twl.c_twl_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/twl/extr_twl.c_twl_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.twl_softc = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @twl_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @twl_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.twl_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.twl_softc* @device_get_softc(i32 %4)
  store %struct.twl_softc* %5, %struct.twl_softc** %3, align 8
  %6 = load %struct.twl_softc*, %struct.twl_softc** %3, align 8
  %7 = getelementptr inbounds %struct.twl_softc, %struct.twl_softc* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = load %struct.twl_softc*, %struct.twl_softc** %3, align 8
  %13 = getelementptr inbounds %struct.twl_softc, %struct.twl_softc* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @device_delete_child(i32 %11, i64 %14)
  br label %16

16:                                               ; preds = %10, %1
  %17 = load %struct.twl_softc*, %struct.twl_softc** %3, align 8
  %18 = getelementptr inbounds %struct.twl_softc, %struct.twl_softc* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %16
  %22 = load i32, i32* %2, align 4
  %23 = load %struct.twl_softc*, %struct.twl_softc** %3, align 8
  %24 = getelementptr inbounds %struct.twl_softc, %struct.twl_softc* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @device_delete_child(i32 %22, i64 %25)
  br label %27

27:                                               ; preds = %21, %16
  %28 = load %struct.twl_softc*, %struct.twl_softc** %3, align 8
  %29 = call i32 @TWL_LOCK_DESTROY(%struct.twl_softc* %28)
  ret i32 0
}

declare dso_local %struct.twl_softc* @device_get_softc(i32) #1

declare dso_local i32 @device_delete_child(i32, i64) #1

declare dso_local i32 @TWL_LOCK_DESTROY(%struct.twl_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
